# hermes-agent-manager

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  requirements.txt
.github/workflows/: desktop-release.yml
app/: app.py  wechat_bind.py
custom-skills/productivity/beautiful-powerpoint/: SKILL.md
custom-skills/productivity/beautiful-word-docx/: SKILL.md
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: build-bundle.mjs  build-macos-dmg.sh
desktop/src/: main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docker/: install-docker-ubuntu.sh
examples/: docker-compose.yml  models.example.yaml
patches/: weixin.py
scripts/: create-default-agent.py  install-offline.sh  install-remote.sh  install.sh  load-images.sh
systemd/: hermes-manager.service  hermes-manager.service.remote.txt
